--- a/package.json
+++ b/package.json
@@ -20,8 +20,16 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@ngrx/effects": "^16.2.0",
+    "@ngrx/entity": "^16.2.0",
+    "@ngrx/router-store": "^16.2.0",
+    "@ngrx/schematics": "^16.2.0",
+    "@ngrx/store": "^16.2.0",
+    "@ngrx/store-devtools": "^16.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "redux": "^4.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
